Fixed homepage Groot quote displaying off screen

--- a/static/css/movieHomepageStyle.css
+++ b/static/css/movieHomepageStyle.css
@@ -170,7 +170,7 @@ body {
 }
 
 .quote-container {
-    margin-left: 140px;
+    margin-left: 60px;
 }
 
 .fourth {
